src/css/style.css
/*-----------------------------------------------------
  Base Styles & Helper Classes:
------------------------------------------------------*/

@font-face {
  font-family: 'chelthmitc_bk_btbold_italic';
  src: url('../fonts/cheltnhmitc_bt-webfont.eot');
  src: url('../fonts/cheltnhmitc_bt-webfont.eot?#iefix') format('embedded-opentype'),
       url('../fonts/cheltnhmitc_bt-webfont.woff2') format('woff2'),
       url('../fonts/cheltnhmitc_bt-webfont.woff') format('woff'),
       url('../fonts/cheltnhmitc_bt-webfont.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

html,
body {
  height: 100%;
  width: 100%;
}

html {
  font-family: 'Open Sans', serif;
  font-weight: 300;
  font-size: 62.5%;
  background: #fff;
  color: #000;
  -webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

body {
  font-size: 1.6rem; /* 16px */
  line-height: 2.5rem;
}

*,
*:before,
*:after {
  box-sizing: border-box;
  image-rendering: -webkit-optimize-contrast;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -webkit-tap-highlight-color: transparent;
}

.clearfix:after,
.max-1500:after,
.max-1200:after,
.max-1000:after,
.max-620:after {
  content: "";
  display: table;
  clear: both;
}

.max-1500,
.max-1200,
.max-1000,
.max-760,
.max-620,
.max-570 {
  margin-left: 20px;
  margin-right: 20px;
  position: relative;
  height: 100%;
}

.max-1500 {
  max-width: 1500px;
}

.max-1200 {
  max-width: 1200px;
}

.max-1000 {
  max-width: 1000px;
}

.max-760 {
  max-width: 760px;
}

.max-620 {
  max-width: 620px;
  margin-left: auto;
  margin-right: auto;
}

.max-570 {
  max-width: 570px;
}

.max-1200 .max-1000,
.max-1200 .max-760,
.max-1000 .max-760 {
  margin-left: auto !important;
  margin-right: auto !important;
}

.max-850 {
  max-width: 850px;
  line-height: 1.7;
  margin: 50px auto;
}

.image-max-100 {
  display: block;
  max-width: 100%;
}

.row {
  display: table;
  width: 100%;
}

.cell {
  display: table-cell;
}

.open-sans {
  font-family: 'Open Sans', serif;
  font-weight: 300;
}

.bold {
  font-weight: bold;
}

img {
  image-rendering: optimizeQuality;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
  color: inherit;
}

h1, h2, h3, h4,
.fancy-pants-font,
.emphasis {
  font-family: 'chelthmitc_bk_btbold_italic', serif;
  font-weight:400;
}

h1,
h2 {
  font-size: 5.5rem;
  line-height: 1;
}

b,
strong {
  font-weight: 600;
}

a {
  text-decoration: none;
  color: #f27c00;
}

.js-image-fill {
  display: block;
}

.js-image-fill img {
  display: none;
}

.text-orange {
  color: #f27c00;
}

.text-white {
  color: #fff;
}

.text-black,
.text-black a {
  color: #000;
}

.lowercase {
  text-transform: lowercase;
}

.text-size-24 {
  font-size: 2rem;
  line-height: 1.2;
}

.text-size-35 {
  font-size: 3.5rem;
  line-height: 1.2;
}

.text-size-40 {
  font-size: 4rem;
  line-height: 1.2;
}

.text-size-45 {
  font-size: 4.5rem;
  line-height: 1.2;
}

.text-semi {
  font-weight: 600 ;
}

.align-center {
  text-align: center;
}

.align-left {
  text-align: left;
}

.underline-orange {
  display: inline-block;
  padding-bottom: 25px;
  margin: 0 0 25px 0;
  border-bottom: 5px solid #f27c00;
}

.faux-table {
  display: table;
  table-layout: fixed;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  text-align: center;
}

.faux-table-cell {
  display: table-cell;
  vertical-align: middle;
}

.no-list-style {
  list-style: none;
  padding: 0;
  margin: 0;
}

.padding-100 {
  padding: 100px 0;
}

.padding-100-top {
  padding-top: 100px;
}

.padding-100-bottom {
  padding-bottom: 100px;
}

.padding-50 {
  padding: 50px 0;
}

.padding-50-top {
  padding-top: 50px;
}

.padding-50-bottom {
  padding-bottom: 50px;
}

.hidden {
  display: none;
}

.invisible {
  visibility: hidden;
}

.drop-btn {
  text-transform: lowercase;
  display: inline-block;
  border-radius: 5px;
  padding: 13px 20px 17px 20px;
  position: relative;
  box-shadow: 3px 3px 0px rgba(0,0,0,0.12);
  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
  font-family: 'chelthmitc_bk_btbold_italic', serif;
  line-height: 1;
  font-size: 2.4rem;
  transition: all 400ms ease;
  border-bottom: 2px solid #e84a04;
  overflow:hidden;
  text-align: center;
}

.drop-btn:hover {
  text-shadow: -2px 1px 2px rgba(0,0,0,0.3);
  box-shadow: -1px 2px 1px rgba(0,0,0,0.3);
}

.drop-btn:after {
  content: '';
  width: 100%;
  height: 100%;
  background: linear-gradient(45deg, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 80%);
  opacity: 0;
  transition: all 1200ms cubic-bezier(.1, 0.68, 0.25, 1.2);
  left: -100%;
  top: 0;
  position: absolute;
  display: block;
 }

.drop-btn:hover:after {
  left: 100%;
  opacity: 1;
}

.small-btn {
  font-size: 1.6rem !important;
  padding: 10px 25px !important;
}

.orange-bg {
  background: #ff632e;
  color: #fff;
}

.text-sheen {
  display: inline-block;
  position: relative;
  overflow: hidden;
  padding-left: 3px;
}

.text-sheen:after {
  content: '';
  width: 100px;
  height: 100%;
  background: linear-gradient(-45deg, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 80%);
  opacity: 0;
  transition: all 1200ms cubic-bezier(.1, 0.68, 0.25, 1.2);
  left: -100%;
  top: 0;
  position: absolute;
  display: block;
}

.text-sheen:hover:after {
  left: 100%;
  opacity: 1;
}

/* inline image containers */

.image-container img {
  width: 100%;
  height: auto;
}

.left {
  float: left;
}

.right {
  float: right;
}

.half {
  width: 50%;
  padding-left: 5%;
  padding-right: 5%;
}
/* ... */

